# serializer version: 1
# name: TestE2ELoadedData.test_e2e_cve_connector_snapshot[cve_connector]
  dict({
    'data': dict({
      'cves': list([
        dict({
          'cve_id': 'CVE-1999-0229',
          'description': 'Denial of service in Windows NT IIS server using ..\\..',
        }),
        dict({
          'cve_id': 'CVE-2000-0115',
          'description': 'IIS allows local users to cause a denial of service via invalid regular expressions in a Visual Basic script in an ASP page.',
        }),
        dict({
          'cve_id': 'CVE-2006-20001',
          'description': '''
            A carefully crafted If: request header can cause a memory read, or write of a single zero byte, in a pool (heap) memory location beyond the header value sent. This could cause the process to crash.
            
            This issue affects Apache HTTP Server 2.4.54 and earlier.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2007-0087',
          'description': 'Microsoft Internet Information Services (IIS), when accessed through a TCP connection with a large window size, allows remote attackers to cause a denial of service (network bandwidth consumption) via a Range header that specifies multiple copies of the same fragment.  NOTE: the severity of this issue has been disputed by third parties, who state that the large window size required by the attack is not normally supported or configured by the server, or that a DDoS-style attack would accomplish the same goal',
        }),
        dict({
          'cve_id': 'CVE-2007-2768',
          'description': 'OpenSSH, when using OPIE (One-Time Passwords in Everything) for PAM, allows remote attackers to determine the existence of certain user accounts, which displays a different response if the user account exists and is configured to use one-time passwords (OTP), a similar issue to CVE-2007-2243.',
        }),
        dict({
          'cve_id': 'CVE-2007-3205',
          'description': 'The parse_str function in (1) PHP, (2) Hardened-PHP, and (3) Suhosin, when called without a second parameter, might allow remote attackers to overwrite arbitrary variables by specifying variable names and values in the string to be parsed.  NOTE: it is not clear whether this is a design limitation of the function or a bug in PHP, although it is likely to be regarded as a bug in Hardened-PHP and Suhosin.',
        }),
        dict({
          'cve_id': 'CVE-2008-1033',
          'description': 'The scheduler in CUPS in Apple Mac OS X 10.5 before 10.5.3, when debug logging is enabled and a printer requires a password, allows attackers to obtain sensitive information (credentials) by reading the log data, related to "authentication environment variables."',
        }),
        dict({
          'cve_id': 'CVE-2008-3844',
          'description': 'Certain Red Hat Enterprise Linux (RHEL) 4 and 5 packages for OpenSSH, as signed in August 2008 using a legitimate Red Hat GPG key, contain an externally introduced modification (Trojan Horse) that allows the package authors to have an unknown impact.  NOTE: since the malicious packages were not distributed from any official Red Hat sources, the scope of this issue is restricted to users who may have obtained these packages through unofficial distribution points.  As of 20080827, no unofficial distributions of this software are known.',
        }),
        dict({
          'cve_id': 'CVE-2009-0032',
          'description': 'CUPS on Mandriva Linux 2008.0, 2008.1, 2009.0, Corporate Server (CS) 3.0 and 4.0, and Multi Network Firewall (MNF) 2.0 allows local users to overwrite arbitrary files via a symlink attack on the /tmp/pdf.log temporary file.',
        }),
        dict({
          'cve_id': 'CVE-2013-5704',
          'description': 'The mod_headers module in the Apache HTTP Server 2.2.22 allows remote attackers to bypass "RequestHeader unset" directives by placing a header in the trailer portion of data sent with chunked transfer coding.  NOTE: the vendor states "this is not a security issue in httpd as such."',
        }),
        dict({
          'cve_id': 'CVE-2013-6438',
          'description': 'The dav_xml_get_cdata function in main/util.c in the mod_dav module in the Apache HTTP Server before 2.4.8 does not properly remove whitespace characters from CDATA sections, which allows remote attackers to cause a denial of service (daemon crash) via a crafted DAV WRITE request.',
        }),
        dict({
          'cve_id': 'CVE-2013-6891',
          'description': 'lppasswd in CUPS before 1.7.1, when running with setuid privileges, allows local users to read portions of arbitrary files via a modified HOME environment variable and a symlink attack involving .cups/client.conf.',
        }),
        dict({
          'cve_id': 'CVE-2014-0098',
          'description': 'The log_cookie function in mod_log_config.c in the mod_log_config module in the Apache HTTP Server before 2.4.8 allows remote attackers to cause a denial of service (segmentation fault and daemon crash) via a crafted cookie that is not properly handled during truncation.',
        }),
        dict({
          'cve_id': 'CVE-2014-0117',
          'description': 'The mod_proxy module in the Apache HTTP Server 2.4.x before 2.4.10, when a reverse proxy is enabled, allows remote attackers to cause a denial of service (child-process crash) via a crafted HTTP Connection header.',
        }),
        dict({
          'cve_id': 'CVE-2014-0118',
          'description': 'The deflate_in_filter function in mod_deflate.c in the mod_deflate module in the Apache HTTP Server before 2.4.10, when request body decompression is enabled, allows remote attackers to cause a denial of service (resource consumption) via crafted request data that decompresses to a much larger size.',
        }),
        dict({
          'cve_id': 'CVE-2014-0226',
          'description': 'Race condition in the mod_status module in the Apache HTTP Server before 2.4.10 allows remote attackers to cause a denial of service (heap-based buffer overflow), or possibly obtain sensitive credential information or execute arbitrary code, via a crafted request that triggers improper scoreboard handling within the status_handler function in modules/generators/mod_status.c and the lua_ap_scoreboard_worker function in modules/lua/lua_request.c.',
        }),
        dict({
          'cve_id': 'CVE-2014-0231',
          'description': 'The mod_cgid module in the Apache HTTP Server before 2.4.10 does not have a timeout mechanism, which allows remote attackers to cause a denial of service (process hang) via a request to a CGI script that does not read from its stdin file descriptor.',
        }),
        dict({
          'cve_id': 'CVE-2014-2856',
          'description': 'Cross-site scripting (XSS) vulnerability in scheduler/client.c in Common Unix Printing System (CUPS) before 1.7.2 allows remote attackers to inject arbitrary web script or HTML via the URL path, related to the is_path_absolute function.',
        }),
        dict({
          'cve_id': 'CVE-2014-3523',
          'description': 'Memory leak in the winnt_accept function in server/mpm/winnt/child.c in the WinNT MPM in the Apache HTTP Server 2.4.x before 2.4.10 on Windows, when the default AcceptFilter is enabled, allows remote attackers to cause a denial of service (memory consumption) via crafted requests.',
        }),
        dict({
          'cve_id': 'CVE-2014-3537',
          'description': 'The web interface in CUPS before 1.7.4 allows local users in the lp group to read arbitrary files via a symlink attack on a file in /var/cache/cups/rss/.',
        }),
        dict({
          'cve_id': 'CVE-2014-3581',
          'description': 'The cache_merge_headers_out function in modules/cache/cache_util.c in the mod_cache module in the Apache HTTP Server before 2.4.11 allows remote attackers to cause a denial of service (NULL pointer dereference and application crash) via an empty HTTP Content-Type header.',
        }),
        dict({
          'cve_id': 'CVE-2014-5030',
          'description': 'CUPS before 2.0 allows local users to read arbitrary files via a symlink attack on (1) index.html, (2) index.class, (3) index.pl, (4) index.php, (5) index.pyc, or (6) index.py.',
        }),
        dict({
          'cve_id': 'CVE-2014-5031',
          'description': 'The web interface in CUPS before 2.0 does not check that files have world-readable permissions, which allows remote attackers to obtains sensitive information via unspecified vectors.',
        }),
        dict({
          'cve_id': 'CVE-2014-8109',
          'description': 'mod_lua.c in the mod_lua module in the Apache HTTP Server 2.3.x and 2.4.x through 2.4.10 does not support an httpd configuration in which the same Lua authorization provider is used with different arguments within different contexts, which allows remote attackers to bypass intended access restrictions in opportunistic circumstances by leveraging multiple Require directives, as demonstrated by a configuration that specifies authorization for one group to access a certain directory, and authorization for a second group to access a second directory.',
        }),
        dict({
          'cve_id': 'CVE-2014-9679',
          'description': 'Integer underflow in the cupsRasterReadPixels function in filter/raster.c in CUPS before 2.0.2 allows remote attackers to have unspecified impact via a malformed compressed raster file, which triggers a buffer overflow.',
        }),
        dict({
          'cve_id': 'CVE-2015-0228',
          'description': 'The lua_websocket_read function in lua_request.c in the mod_lua module in the Apache HTTP Server through 2.4.12 allows remote attackers to cause a denial of service (child-process crash) by sending a crafted WebSocket Ping frame after a Lua script has called the wsupgrade function.',
        }),
        dict({
          'cve_id': 'CVE-2015-3183',
          'description': 'The chunked transfer coding implementation in the Apache HTTP Server before 2.4.14 does not properly parse chunk headers, which allows remote attackers to conduct HTTP request smuggling attacks via a crafted request, related to mishandling of large chunk-size values and invalid chunk-extension characters in modules/http/http_filters.c.',
        }),
        dict({
          'cve_id': 'CVE-2015-3185',
          'description': 'The ap_some_auth_required function in server/request.c in the Apache HTTP Server 2.4.x before 2.4.14 does not consider that a Require directive may be associated with an authorization setting rather than an authentication setting, which allows remote attackers to bypass intended access restrictions in opportunistic circumstances by leveraging the presence of a module that relies on the 2.2 API behavior.',
        }),
        dict({
          'cve_id': 'CVE-2015-3306',
          'description': 'The mod_copy module in ProFTPD 1.3.5 allows remote attackers to read and write to arbitrary files via the site cpfr and site cpto commands.',
        }),
        dict({
          'cve_id': 'CVE-2015-5352',
          'description': 'The x11_open_helper function in channels.c in ssh in OpenSSH before 6.9, when ForwardX11Trusted mode is not used, lacks a check of the refusal deadline for X connections, which makes it easier for remote attackers to bypass intended access restrictions via a connection outside of the permitted time window.',
        }),
        dict({
          'cve_id': 'CVE-2015-5600',
          'description': 'The kbdint_next_device function in auth2-chall.c in sshd in OpenSSH through 6.9 does not properly restrict the processing of keyboard-interactive devices within a single connection, which makes it easier for remote attackers to conduct brute-force attacks or cause a denial of service (CPU consumption) via a long and duplicative list in the ssh -oKbdInteractiveDevices option, as demonstrated by a modified client that provides a different password for each pam element on this list.',
        }),
        dict({
          'cve_id': 'CVE-2015-6563',
          'description': 'The monitor component in sshd in OpenSSH before 7.0 on non-OpenBSD platforms accepts extraneous username data in MONITOR_REQ_PAM_INIT_CTX requests, which allows local users to conduct impersonation attacks by leveraging any SSH login access in conjunction with control of the sshd uid to send a crafted MONITOR_REQ_PWNAM request, related to monitor.c and monitor_wrap.c.',
        }),
        dict({
          'cve_id': 'CVE-2015-6564',
          'description': 'Use-after-free vulnerability in the mm_answer_pam_free_ctx function in monitor.c in sshd in OpenSSH before 7.0 on non-OpenBSD platforms might allow local users to gain privileges by leveraging control of the sshd uid to send an unexpectedly early MONITOR_REQ_PAM_FREE_CTX request.',
        }),
        dict({
          'cve_id': 'CVE-2015-9253',
          'description': 'An issue was discovered in PHP 7.3.x before 7.3.0alpha3, 7.2.x before 7.2.8, and before 7.1.20. The php-fpm master process restarts a child process in an endless loop when using program execution functions (e.g., passthru, exec, shell_exec, or system) with a non-blocking STDIN stream, causing this master process to consume 100% of the CPU, and consume disk space with a large volume of error logs, as demonstrated by an attack by a customer of a shared-hosting facility.',
        }),
        dict({
          'cve_id': 'CVE-2016-0736',
          'description': 'In Apache HTTP Server versions 2.4.0 to 2.4.23, mod_session_crypto was encrypting its data/cookie using the configured ciphers with possibly either CBC or ECB modes of operation (AES256-CBC by default), hence no selectable or builtin authenticated encryption. This made it vulnerable to padding oracle attacks, particularly with CBC.',
        }),
        dict({
          'cve_id': 'CVE-2016-10009',
          'description': 'Untrusted search path vulnerability in ssh-agent.c in ssh-agent in OpenSSH before 7.4 allows remote attackers to execute arbitrary local PKCS#11 modules by leveraging control over a forwarded agent-socket.',
        }),
        dict({
          'cve_id': 'CVE-2016-10010',
          'description': 'sshd in OpenSSH before 7.4, when privilege separation is not used, creates forwarded Unix-domain sockets as root, which might allow local users to gain privileges via unspecified vectors, related to serverloop.c.',
        }),
        dict({
          'cve_id': 'CVE-2016-10011',
          'description': 'authfile.c in sshd in OpenSSH before 7.4 does not properly consider the effects of realloc on buffer contents, which might allow local users to obtain sensitive private-key information by leveraging access to a privilege-separated child process.',
        }),
        dict({
          'cve_id': 'CVE-2016-10012',
          'description': 'The shared memory manager (associated with pre-authentication compression) in sshd in OpenSSH before 7.4 does not ensure that a bounds check is enforced by all compilers, which might allows local users to gain privileges by leveraging access to a sandboxed privilege-separation process, related to the m_zback and m_zlib data structures.',
        }),
        dict({
          'cve_id': 'CVE-2016-10708',
          'description': 'sshd in OpenSSH before 7.4 allows remote attackers to cause a denial of service (NULL pointer dereference and daemon crash) via an out-of-sequence NEWKEYS message, as demonstrated by Honggfuzz, related to kex.c and packet.c.',
        }),
        dict({
          'cve_id': 'CVE-2016-1908',
          'description': 'The client in OpenSSH before 7.2 mishandles failed cookie generation for untrusted X11 forwarding and relies on the local X11 server for access-control decisions, which allows remote X11 clients to trigger a fallback and obtain trusted X11 forwarding privileges by leveraging configuration issues on this X11 server, as demonstrated by lack of the SECURITY extension on this X11 server.',
        }),
        dict({
          'cve_id': 'CVE-2016-20012',
          'description': 'OpenSSH through 8.7 allows remote attackers, who have a suspicion that a certain combination of username and public key is known to an SSH server, to test whether this suspicion is correct. This occurs because a challenge is sent only when that combination could be valid for a login session. NOTE: the vendor does not recognize user enumeration as a vulnerability for this product',
        }),
        dict({
          'cve_id': 'CVE-2016-2161',
          'description': 'In Apache HTTP Server versions 2.4.0 to 2.4.23, malicious input to mod_auth_digest can cause the server to crash, and each instance continues to crash even for subsequently valid requests.',
        }),
        dict({
          'cve_id': 'CVE-2016-4975',
          'description': 'Possible CRLF injection allowing HTTP response splitting attacks for sites which use mod_userdir. This issue was mitigated by changes made in 2.4.25 and 2.2.32 which prohibit CR or LF injection into the "Location" or other outbound header key or value. Fixed in Apache HTTP Server 2.4.25 (Affected 2.4.1-2.4.23). Fixed in Apache HTTP Server 2.2.32 (Affected 2.2.0-2.2.31).',
        }),
        dict({
          'cve_id': 'CVE-2016-5387',
          'description': 'The Apache HTTP Server through 2.4.23 follows RFC 3875 section 4.1.18 and therefore does not protect applications from the presence of untrusted client data in the HTTP_PROXY environment variable, which might allow remote attackers to redirect an application\'s outbound HTTP traffic to an arbitrary proxy server via a crafted Proxy header in an HTTP request, aka an "httpoxy" issue.  NOTE: the vendor states "This mitigation has been assigned the identifier CVE-2016-5387"; in other words, this is not a CVE ID for a vulnerability.',
        }),
        dict({
          'cve_id': 'CVE-2016-8612',
          'description': 'Apache HTTP Server mod_cluster before version httpd 2.4.23 is vulnerable to an Improper Input Validation in the protocol parsing logic in the load balancer resulting in a Segmentation Fault in the serving httpd process.',
        }),
        dict({
          'cve_id': 'CVE-2016-8743',
          'description': 'Apache HTTP Server, in all releases prior to 2.2.32 and 2.4.25, was liberal in the whitespace accepted from requests and sent in response lines and headers. Accepting these different behaviors represented a security concern when httpd participates in any chain of proxies or interacts with back-end application servers, either through mod_proxy or using conventional CGI mechanisms, and may result in request smuggling, response splitting and cache pollution.',
        }),
        dict({
          'cve_id': 'CVE-2017-15710',
          'description': "In Apache httpd 2.0.23 to 2.0.65, 2.2.0 to 2.2.34, and 2.4.0 to 2.4.29, mod_authnz_ldap, if configured with AuthLDAPCharsetConfig, uses the Accept-Language header value to lookup the right charset encoding when verifying the user's credentials. If the header value is not present in the charset conversion table, a fallback mechanism is used to truncate it to a two characters value to allow a quick retry (for example, 'en-US' is truncated to 'en'). A header value of less than two characters forces an out of bound write of one NUL byte to a memory location that is not part of the string. In the worst case, quite unlikely, the process would crash which could be used as a Denial of Service attack. In the more likely case, this memory is already reserved for future use and the issue has no effect at all.",
        }),
        dict({
          'cve_id': 'CVE-2017-15715',
          'description': "In Apache httpd 2.4.0 to 2.4.29, the expression specified in <FilesMatch> could match '$' to a newline character in a malicious filename, rather than matching only the end of the filename. This could be exploited in environments where uploads of some files are are externally blocked, but only by matching the trailing portion of the filename.",
        }),
        dict({
          'cve_id': 'CVE-2017-15906',
          'description': 'The process_open function in sftp-server.c in OpenSSH before 7.6 does not properly prevent write operations in readonly mode, which allows attackers to create zero-length files.',
        }),
        dict({
          'cve_id': 'CVE-2017-18190',
          'description': 'A localhost.localdomain whitelist entry in valid_host() in scheduler/client.c in CUPS before 2.2.2 allows remote attackers to execute arbitrary IPP commands by sending POST requests to the CUPS daemon in conjunction with DNS rebinding. The localhost.localdomain name is often resolved via a DNS server (neither the OS nor the web browser is responsible for ensuring that localhost.localdomain is 127.0.0.1).',
        }),
        dict({
          'cve_id': 'CVE-2017-18248',
          'description': 'The add_job function in scheduler/ipp.c in CUPS before 2.2.6, when D-Bus support is enabled, can be crashed by remote attackers by sending print jobs with an invalid username, related to a D-Bus notification.',
        }),
        dict({
          'cve_id': 'CVE-2017-3167',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, use of the ap_get_basic_auth_pw() by third-party modules outside of the authentication phase may lead to authentication requirements being bypassed.',
        }),
        dict({
          'cve_id': 'CVE-2017-3169',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, mod_ssl may dereference a NULL pointer when third-party modules call ap_hook_process_connection() during an HTTP request to an HTTPS port.',
        }),
        dict({
          'cve_id': 'CVE-2017-7272',
          'description': 'PHP through 7.1.11 enables potential SSRF in applications that accept an fsockopen or pfsockopen hostname argument with an expectation that the port number is constrained. Because a :port syntax is recognized, fsockopen will use the port number that is specified in the hostname argument, instead of the port number in the second argument of the function.',
        }),
        dict({
          'cve_id': 'CVE-2017-7659',
          'description': 'A maliciously constructed HTTP/2 request could cause mod_http2 in Apache HTTP Server 2.4.24, 2.4.25 to dereference a NULL pointer and crash the server process.',
        }),
        dict({
          'cve_id': 'CVE-2017-7668',
          'description': 'The HTTP strict parsing changes added in Apache httpd 2.2.32 and 2.4.24 introduced a bug in token list parsing, which allows ap_find_token() to search past the end of its input string. By maliciously crafting a sequence of request headers, an attacker may be able to cause a segmentation fault, or to force ap_find_token() to return an incorrect value.',
        }),
        dict({
          'cve_id': 'CVE-2017-7679',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, mod_mime can read one byte past the end of a buffer when sending a malicious Content-Type response header.',
        }),
        dict({
          'cve_id': 'CVE-2017-7963',
          'description': 'The GNU Multiple Precision Arithmetic Library (GMP) interfaces for PHP through 7.1.4 allow attackers to cause a denial of service (memory consumption and application crash) via operations on long strings. NOTE: the vendor disputes this, stating "There is no security issue here, because GMP safely aborts in case of an OOM condition. The only attack vector here is denial of service. However, if you allow attacker-controlled, unbounded allocations you have a DoS vector regardless of GMP\'s OOM behavior.',
        }),
        dict({
          'cve_id': 'CVE-2017-8923',
          'description': "The zend_string_extend function in Zend/zend_string.h in PHP through 7.1.5 does not prevent changes to string objects that result in a negative length, which allows remote attackers to cause a denial of service (application crash) or possibly have unspecified other impact by leveraging a script's use of .= with a long string.",
        }),
        dict({
          'cve_id': 'CVE-2017-9788',
          'description': "In Apache httpd before 2.2.34 and 2.4.x before 2.4.27, the value placeholder in [Proxy-]Authorization headers of type 'Digest' was not initialized or reset before or between successive key=value assignments by mod_auth_digest. Providing an initial key with no '=' assignment could reflect the stale value of uninitialized pool memory used by the prior request, leading to leakage of potentially confidential information, and a segfault in other cases resulting in denial of service.",
        }),
        dict({
          'cve_id': 'CVE-2017-9798',
          'description': "Apache httpd allows remote attackers to read secret data from process memory if the Limit directive can be set in a user's .htaccess file, or if httpd.conf has certain misconfigurations, aka Optionsbleed. This affects the Apache HTTP Server through 2.2.34 and 2.4.x through 2.4.27. The attacker sends an unauthenticated OPTIONS HTTP request when attempting to read secret data. This is a use-after-free issue and thus secret data is not always sent, and the specific data depends on many factors including configuration. Exploitation with .htaccess can be blocked with a patch to the ap_limit_section function in server/core.c.",
        }),
        dict({
          'cve_id': 'CVE-2018-11763',
          'description': 'In Apache HTTP Server 2.4.17 to 2.4.34, by sending continuous, large SETTINGS frames a client can occupy a connection, server thread and CPU time without any connection timeout coming to effect. This affects only HTTP/2 connections. A possible mitigation is to not enable the h2 protocol.',
        }),
        dict({
          'cve_id': 'CVE-2018-1283',
          'description': 'In Apache httpd 2.4.0 to 2.4.29, when mod_session is configured to forward its session data to CGI applications (SessionEnv on, not the default), a remote user may influence their content by using a "Session" header. This comes from the "HTTP_SESSION" variable name used by mod_session to forward its data to CGIs, since the prefix "HTTP_" is also used by the Apache HTTP Server to pass HTTP header fields, per CGI specifications.',
        }),
        dict({
          'cve_id': 'CVE-2018-1301',
          'description': 'A specially crafted request could have crashed the Apache HTTP Server prior to version 2.4.30, due to an out of bound access after a size limit is reached by reading the HTTP header. This vulnerability is considered very hard if not impossible to trigger in non-debug mode (both log and build level), so it is classified as low risk for common server usage.',
        }),
        dict({
          'cve_id': 'CVE-2018-1302',
          'description': 'When an HTTP/2 stream was destroyed after being handled, the Apache HTTP Server prior to version 2.4.30 could have written a NULL pointer potentially to an already freed memory. The memory pools maintained by the server make this vulnerability hard to trigger in usual configurations, the reporter and the team could not reproduce it outside debug builds, so it is classified as low risk.',
        }),
        dict({
          'cve_id': 'CVE-2018-1303',
          'description': 'A specially crafted HTTP request header could have crashed the Apache HTTP Server prior to version 2.4.30 due to an out of bound read while preparing data to be cached in shared memory. It could be used as a Denial of Service attack against users of mod_cache_socache. The vulnerability is considered as low risk since mod_cache_socache is not widely used, mod_cache_disk is not concerned by this vulnerability.',
        }),
        dict({
          'cve_id': 'CVE-2018-1312',
          'description': 'In Apache httpd 2.2.0 to 2.4.29, when generating an HTTP Digest authentication challenge, the nonce sent to prevent reply attacks was not correctly generated using a pseudo-random seed. In a cluster of servers using a common Digest authentication configuration, HTTP requests could be replayed across servers by an attacker without detection.',
        }),
        dict({
          'cve_id': 'CVE-2018-1333',
          'description': 'By specially crafting HTTP/2 requests, workers would be allocated 60 seconds longer than necessary, leading to worker exhaustion and a denial of service. Fixed in Apache HTTP Server 2.4.34 (Affected 2.4.18-2.4.30,2.4.33).',
        }),
        dict({
          'cve_id': 'CVE-2018-15473',
          'description': 'OpenSSH through 7.7 is prone to a user enumeration vulnerability due to not delaying bailout for an invalid authenticating user until after the packet containing the request has been fully parsed, related to auth2-gss.c, auth2-hostbased.c, and auth2-pubkey.c.',
        }),
        dict({
          'cve_id': 'CVE-2018-15919',
          'description': 'Remotely observable behaviour in auth-gss2.c in OpenSSH through 7.8 could be used by remote attackers to detect existence of users on a target system when GSS2 is in use. NOTE: the discoverer states \'We understand that the OpenSSH developers do not want to treat such a username enumeration (or "oracle") as a vulnerability.\'',
        }),
        dict({
          'cve_id': 'CVE-2018-17189',
          'description': 'In Apache HTTP server versions 2.4.37 and prior, by sending request bodies in a slow loris way to plain resources, the h2 stream for that request unnecessarily occupied a server thread cleaning up that incoming data. This affects only HTTP/2 (mod_http2) connections.',
        }),
        dict({
          'cve_id': 'CVE-2018-17199',
          'description': 'In Apache HTTP Server 2.4 release 2.4.37 and prior, mod_session checks the session expiry time before decoding the session. This causes session expiry time to be ignored for mod_session_cookie sessions since the expiry time is loaded when the session is decoded.',
        }),
        dict({
          'cve_id': 'CVE-2018-19395',
          'description': 'ext/standard/var.c in PHP 5.x through 7.1.24 on Windows allows attackers to cause a denial of service (NULL pointer dereference and application crash) because com and com_safearray_proxy return NULL in com_properties_get in ext/com_dotnet/com_handlers.c, as demonstrated by a serialize call on COM("WScript.Shell").',
        }),
        dict({
          'cve_id': 'CVE-2018-19396',
          'description': 'ext/standard/var_unserializer.c in PHP 5.x through 7.1.24 allows attackers to cause a denial of service (application crash) via an unserialize call for the com, dotnet, or variant class.',
        }),
        dict({
          'cve_id': 'CVE-2018-20685',
          'description': 'In OpenSSH 7.9, scp.c in the scp client allows remote SSH servers to bypass intended access restrictions via the filename of . or an empty filename. The impact is modifying the permissions of the target directory on the client side.',
        }),
        dict({
          'cve_id': 'CVE-2018-4300',
          'description': 'The session cookie generated by the CUPS web interface was easy to guess on Linux, allowing unauthorized scripted access to the web interface when the web interface is enabled. This issue affected versions prior to v2.2.10.',
        }),
        dict({
          'cve_id': 'CVE-2019-0196',
          'description': 'A vulnerability was found in Apache HTTP Server 2.4.17 to 2.4.38. Using fuzzed network input, the http/2 request handling could be made to access freed memory in string comparison when determining the method of a request and thus process the request incorrectly.',
        }),
        dict({
          'cve_id': 'CVE-2019-0211',
          'description': 'In Apache HTTP Server 2.4 releases 2.4.17 to 2.4.38, with MPM event, worker or prefork, code executing in less-privileged child processes or threads (including scripts executed by an in-process scripting interpreter) could execute arbitrary code with the privileges of the parent process (usually root) by manipulating the scoreboard. Non-Unix systems are not affected.',
        }),
        dict({
          'cve_id': 'CVE-2019-0217',
          'description': 'In Apache HTTP Server 2.4 release 2.4.38 and prior, a race condition in mod_auth_digest when running in a threaded server could allow a user with valid credentials to authenticate using another username, bypassing configured access control restrictions.',
        }),
        dict({
          'cve_id': 'CVE-2019-0220',
          'description': "A vulnerability was found in Apache HTTP Server 2.4.0 to 2.4.38. When the path component of a request URL contains multiple consecutive slashes ('/'), directives such as LocationMatch and RewriteRule must account for duplicates in regular expressions while other aspects of the servers processing will implicitly collapse them.",
        }),
        dict({
          'cve_id': 'CVE-2019-10081',
          'description': 'HTTP/2 (2.4.20 through 2.4.39) very early pushes, for example configured with "H2PushResource", could lead to an overwrite of memory in the pushing request\'s pool, leading to crashes. The memory copied is that of the configured push link header values, not data supplied by the client.',
        }),
        dict({
          'cve_id': 'CVE-2019-10082',
          'description': 'In Apache HTTP Server 2.4.18-2.4.39, using fuzzed network input, the http/2 session handling could be made to read memory after being freed, during connection shutdown.',
        }),
        dict({
          'cve_id': 'CVE-2019-10092',
          'description': 'In Apache HTTP Server 2.4.0-2.4.39, a limited cross-site scripting issue was reported affecting the mod_proxy error page. An attacker could cause the link on the error page to be malformed and instead point to a page of their choice. This would only be exploitable where a server was set up with proxying enabled but was misconfigured in such a way that the Proxy Error page was displayed.',
        }),
        dict({
          'cve_id': 'CVE-2019-10098',
          'description': 'In Apache HTTP server 2.4.0 to 2.4.39, Redirects configured with mod_rewrite that were intended to be self-referential might be fooled by encoded newlines and redirect instead to an unexpected URL within the request URL.',
        }),
        dict({
          'cve_id': 'CVE-2019-11034',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.28, 7.2.x below 7.2.17 and 7.3.x below 7.3.4 can be caused to read past allocated buffer in exif_process_IFD_TAG function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11035',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.28, 7.2.x below 7.2.17 and 7.3.x below 7.3.4 can be caused to read past allocated buffer in exif_iif_add_value function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11036',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.29, 7.2.x below 7.2.18 and 7.3.x below 7.3.5 can be caused to read past allocated buffer in exif_process_IFD_TAG function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11038',
          'description': 'When using the gdImageCreateFromXbm() function in the GD Graphics Library (aka LibGD) 2.2.5, as used in the PHP GD extension in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6, it is possible to supply data that will cause the function to use the value of uninitialized variable. This may lead to disclosing contents of the stack that has been left there by previous code.',
        }),
        dict({
          'cve_id': 'CVE-2019-11039',
          'description': 'Function iconv_mime_decode_headers() in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6 may perform out-of-buffer read due to integer overflow when parsing MIME headers. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11040',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11041',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.31, 7.2.x below 7.2.21 and 7.3.x below 7.3.8 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11042',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.31, 7.2.x below 7.2.21 and 7.3.x below 7.3.8 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11043',
          'description': 'In PHP versions 7.1.x below 7.1.33, 7.2.x below 7.2.24 and 7.3.x below 7.3.11 in certain configurations of FPM setup it is possible to cause FPM module to write past allocated buffers into the space reserved for FCGI protocol data, thus opening the possibility of remote code execution.',
        }),
        dict({
          'cve_id': 'CVE-2019-12815',
          'description': 'An arbitrary file copy vulnerability in mod_copy in ProFTPD up to 1.3.5b allows for remote code execution and information disclosure without authentication, a related issue to CVE-2015-3306.',
        }),
        dict({
          'cve_id': 'CVE-2019-13224',
          'description': 'A use-after-free in onig_new_deluxe() in regext.c in Oniguruma 6.9.2 allows attackers to potentially cause information disclosure, denial of service, or possibly code execution by providing a crafted regular expression. The attacker provides a pair of a regex pattern and a string, with a multi-byte encoding that gets handled by onig_new_deluxe(). Oniguruma issues often affect Ruby, as well as common optional libraries for PHP and Rust.',
        }),
        dict({
          'cve_id': 'CVE-2019-17567',
          'description': 'Apache HTTP Server versions 2.4.6 to 2.4.46 mod_proxy_wstunnel configured on an URL that is not necessarily Upgraded by the origin server was tunneling the whole connection regardless, thus allowing for subsequent requests on the same connection to pass through with no HTTP validation, authentication or authorization possibly configured.',
        }),
        dict({
          'cve_id': 'CVE-2019-18217',
          'description': 'ProFTPD before 1.3.6b and 1.3.7rc before 1.3.7rc2 allows remote unauthenticated denial-of-service due to incorrect handling of overly long commands because main.c in a child process enters an infinite loop.',
        }),
        dict({
          'cve_id': 'CVE-2019-19269',
          'description': 'An issue was discovered in tls_verify_crl in ProFTPD through 1.3.6b. A dereference of a NULL pointer may occur. This pointer is returned by the OpenSSL sk_X509_REVOKED_value() function when encountering an empty CRL installed by a system administrator. The dereference occurs when validating the certificate of a client connecting to the server in a TLS client/server mutual-authentication setup.',
        }),
        dict({
          'cve_id': 'CVE-2019-19270',
          'description': 'An issue was discovered in tls_verify_crl in ProFTPD through 1.3.6b. Failure to check for the appropriate field of a CRL entry (checking twice for subject, rather than once for subject and once for issuer) prevents some valid CRLs from being taken into account, and can allow clients whose certificates have been revoked to proceed with a connection to the server.',
        }),
        dict({
          'cve_id': 'CVE-2019-19271',
          'description': 'An issue was discovered in tls_verify_crl in ProFTPD before 1.3.6. A wrong iteration variable, used when checking a client certificate against CRL entries (installed by a system administrator), can cause some CRL entries to be ignored, and can allow clients whose certificates have been revoked to proceed with a connection to the server.',
        }),
        dict({
          'cve_id': 'CVE-2019-19272',
          'description': 'An issue was discovered in tls_verify_crl in ProFTPD before 1.3.6. Direct dereference of a NULL pointer (a variable initialized to NULL) leads to a crash when validating the certificate of a client connecting to the server in a TLS client/server mutual-authentication setup.',
        }),
        dict({
          'cve_id': 'CVE-2019-6109',
          'description': 'An issue was discovered in OpenSSH 7.9. Due to missing character encoding in the progress display, a malicious server (or Man-in-The-Middle attacker) can employ crafted object names to manipulate the client output, e.g., by using ANSI control codes to hide additional files being transferred. This affects refresh_progress_meter() in progressmeter.c.',
        }),
        dict({
          'cve_id': 'CVE-2019-6110',
          'description': 'In OpenSSH 7.9, due to accepting and displaying arbitrary stderr output from the server, a malicious server (or Man-in-The-Middle attacker) can manipulate the client output, for example to use ANSI control codes to hide additional files being transferred.',
        }),
        dict({
          'cve_id': 'CVE-2019-6111',
          'description': 'An issue was discovered in OpenSSH 7.9. Due to the scp implementation being derived from 1983 rcp, the server chooses which files/directories are sent to the client. However, the scp client only performs cursory validation of the object name returned (only directory traversal attacks are prevented). A malicious scp server (or Man-in-The-Middle attacker) can overwrite arbitrary files in the scp client target directory. If recursive operation (-r) is performed, the server can manipulate subdirectories as well (for example, to overwrite the .ssh/authorized_keys file).',
        }),
        dict({
          'cve_id': 'CVE-2019-9517',
          'description': 'Some HTTP/2 implementations are vulnerable to unconstrained interal data buffering, potentially leading to a denial of service. The attacker opens the HTTP/2 window so the peer can send without constraint; however, they leave the TCP window closed so the peer cannot actually write (many of) the bytes on the wire. The attacker then sends a stream of requests for a large response object. Depending on how the servers queue the responses, this can consume excess memory, CPU, or both.',
        }),
        dict({
          'cve_id': 'CVE-2019-9637',
          'description': 'An issue was discovered in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. Due to the way rename() across filesystems is implemented, it is possible that file being renamed is briefly available with wrong permissions while the rename is ongoing, thus enabling unauthorized users to access the data.',
        }),
        dict({
          'cve_id': 'CVE-2019-9638',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_MAKERNOTE because of mishandling the maker_note->offset relationship to value_len.',
        }),
        dict({
          'cve_id': 'CVE-2019-9639',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_MAKERNOTE because of mishandling the data_len variable.',
        }),
        dict({
          'cve_id': 'CVE-2019-9640',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an Invalid Read in exif_process_SOFn.',
        }),
        dict({
          'cve_id': 'CVE-2019-9641',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_TIFF.',
        }),
        dict({
          'cve_id': 'CVE-2019-9675',
          'description': 'An issue was discovered in PHP 7.x before 7.1.27 and 7.3.x before 7.3.3. phar_tar_writeheaders_int in ext/phar/tar.c has a buffer overflow via a long link value. NOTE: The vendor indicates that the link value is used only when an archive contains a symlink, which currently cannot happen: "This issue allows theoretical compromise of security, but a practical attack is usually impossible.',
        }),
        dict({
          'cve_id': 'CVE-2020-11985',
          'description': 'IP address spoofing when proxying using mod_remoteip and mod_rewrite For configurations using proxying with mod_remoteip and certain mod_rewrite rules, an attacker could spoof their IP address for logging and PHP scripts. Note this issue was fixed in Apache HTTP Server 2.4.24 but was retrospectively allocated a low severity CVE in 2020.',
        }),
        dict({
          'cve_id': 'CVE-2020-11993',
          'description': 'Apache HTTP Server versions 2.4.20 to 2.4.43 When trace/debug was enabled for the HTTP/2 module and on certain traffic edge patterns, logging statements were made on the wrong connection, causing concurrent use of memory pools. Configuring the LogLevel of mod_http2 above "info" will mitigate this vulnerability for unpatched servers.',
        }),
        dict({
          'cve_id': 'CVE-2020-13938',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 Unprivileged local users can stop httpd on Windows',
        }),
        dict({
          'cve_id': 'CVE-2020-14145',
          'description': 'The client side in OpenSSH 5.7 through 8.4 has an Observable Discrepancy leading to an information leak in the algorithm negotiation. This allows man-in-the-middle attackers to target initial connection attempts (where no host key for the server has been cached by the client). NOTE: some reports state that 8.5 and 8.6 are also affected.',
        }),
        dict({
          'cve_id': 'CVE-2020-15778',
          'description': 'scp in OpenSSH through 8.3p1 allows command injection in the scp.c toremote function, as demonstrated by backtick characters in the destination argument. NOTE: the vendor reportedly has stated that they intentionally omit validation of "anomalous argument transfers" because that could "stand a great chance of breaking existing workflows."',
        }),
        dict({
          'cve_id': 'CVE-2020-1927',
          'description': 'In Apache HTTP Server 2.4.0 to 2.4.41, redirects configured with mod_rewrite that were intended to be self-referential might be fooled by encoded newlines and redirect instead to an an unexpected URL within the request URL.',
        }),
        dict({
          'cve_id': 'CVE-2020-1934',
          'description': 'In Apache HTTP Server 2.4.0 to 2.4.41, mod_proxy_ftp may use uninitialized memory when proxying to a malicious FTP server.',
        }),
        dict({
          'cve_id': 'CVE-2020-35452',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 A specially crafted Digest nonce can cause a stack overflow in mod_auth_digest. There is no report of this overflow being exploitable, nor the Apache HTTP Server team could create one, though some particular compiler and/or compilation option might make it possible, with limited consequences anyway due to the size (a single byte) and the value (zero byte) of the overflow',
        }),
        dict({
          'cve_id': 'CVE-2020-9272',
          'description': 'ProFTPD 1.3.7 has an out-of-bounds (OOB) read vulnerability in mod_cap via the cap_text.c cap_to_text function.',
        }),
        dict({
          'cve_id': 'CVE-2020-9490',
          'description': 'Apache HTTP Server versions 2.4.20 to 2.4.43. A specially crafted value for the \'Cache-Digest\' header in a HTTP/2 request would result in a crash when the server actually tries to HTTP/2 PUSH a resource afterwards. Configuring the HTTP/2 feature via "H2Push off" will mitigate this vulnerability for unpatched servers.',
        }),
        dict({
          'cve_id': 'CVE-2021-23017',
          'description': 'A security issue in nginx resolver was identified, which might allow an attacker who is able to forge UDP packets from the DNS server to cause 1-byte memory overwrite, resulting in worker process crash or potential other impact.',
        }),
        dict({
          'cve_id': 'CVE-2021-26690',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 A specially crafted Cookie header handled by mod_session can cause a NULL pointer dereference and crash, leading to a possible Denial Of Service',
        }),
        dict({
          'cve_id': 'CVE-2021-26691',
          'description': 'In Apache HTTP Server versions 2.4.0 to 2.4.46 a specially crafted SessionHeader sent by an origin server could cause a heap overflow',
        }),
        dict({
          'cve_id': 'CVE-2021-33193',
          'description': 'A crafted method sent through HTTP/2 will bypass validation and be forwarded by mod_proxy, which can lead to request splitting or cache poisoning. This issue affects Apache HTTP Server 2.4.17 to 2.4.48.',
        }),
        dict({
          'cve_id': 'CVE-2021-34798',
          'description': 'Malformed requests may cause the server to dereference a NULL pointer. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-3618',
          'description': "ALPACA is an application layer protocol content confusion attack, exploiting TLS servers implementing different protocols but using compatible certificates, such as multi-domain or wildcard certificates. A MiTM attacker having access to victim's traffic at the TCP/IP layer can redirect traffic from one subdomain to another, resulting in a valid TLS session. This breaks the authentication of TLS and cross-protocol attacks may be possible where the behavior of one protocol service may compromise the other at the application layer.",
        }),
        dict({
          'cve_id': 'CVE-2021-36368',
          'description': 'An issue was discovered in OpenSSH before 8.9. If a client is using public-key authentication with agent forwarding but without -oLogLevel=verbose, and an attacker has silently modified the server to support the None authentication option, then the user cannot determine whether FIDO authentication is going to confirm that the user wishes to connect to that server, or that the user wishes to allow that server to connect to a different server on the user\'s behalf. NOTE: the vendor\'s position is "this is not an authentication bypass, since nothing is being bypassed.',
        }),
        dict({
          'cve_id': 'CVE-2021-39275',
          'description': 'ap_escape_quotes() may write beyond the end of a buffer when given malicious input. No included modules pass untrusted data to these functions, but third-party / external modules may. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-40438',
          'description': 'A crafted request uri-path can cause mod_proxy to forward the request to an origin server choosen by the remote user. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-41617',
          'description': 'sshd in OpenSSH 6.2 through 8.x before 8.8, when certain non-default configurations are used, allows privilege escalation because supplemental groups are not initialized as expected. Helper programs for AuthorizedKeysCommand and AuthorizedPrincipalsCommand may run with privileges associated with group memberships of the sshd process, if the configuration specifies running the command as a different user.',
        }),
        dict({
          'cve_id': 'CVE-2021-44224',
          'description': 'A crafted URI sent to httpd configured as a forward proxy (ProxyRequests on) can cause a crash (NULL pointer dereference) or, for configurations mixing forward and reverse proxy declarations, can allow for requests to be directed to a declared Unix Domain Socket endpoint (Server Side Request Forgery). This issue affects Apache HTTP Server 2.4.7 up to 2.4.51 (included).',
        }),
        dict({
          'cve_id': 'CVE-2021-44790',
          'description': 'A carefully crafted request body can cause a buffer overflow in the mod_lua multipart parser (r:parsebody() called from Lua scripts). The Apache httpd team is not aware of an exploit for the vulnerabilty though it might be possible to craft one. This issue affects Apache HTTP Server 2.4.51 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-46854',
          'description': 'mod_radius in ProFTPD before 1.3.7c allows memory disclosure to RADIUS servers because it copies blocks of 16 characters.',
        }),
        dict({
          'cve_id': 'CVE-2022-22719',
          'description': 'A carefully crafted request body can cause a read to a random memory area which could cause the process to crash. This issue affects Apache HTTP Server 2.4.52 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2022-22720',
          'description': 'Apache HTTP Server 2.4.52 and earlier fails to close inbound connection when errors are encountered discarding the request body, exposing the server to HTTP Request Smuggling',
        }),
        dict({
          'cve_id': 'CVE-2022-22721',
          'description': 'If LimitXMLRequestBody is set to allow request bodies larger than 350MB (defaults to 1M) on 32 bit systems an integer overflow happens which later causes out of bounds writes. This issue affects Apache HTTP Server 2.4.52 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2022-23943',
          'description': 'Out-of-bounds Write vulnerability in mod_sed of Apache HTTP Server allows an attacker to overwrite heap memory with possibly attacker provided data. This issue affects Apache HTTP Server 2.4 version 2.4.52 and prior versions.',
        }),
        dict({
          'cve_id': 'CVE-2022-26377',
          'description': "Inconsistent Interpretation of HTTP Requests ('HTTP Request Smuggling') vulnerability in mod_proxy_ajp of Apache HTTP Server allows an attacker to smuggle requests to the AJP server it forwards requests to. This issue affects Apache HTTP Server Apache HTTP Server 2.4 version 2.4.53 and prior versions.",
        }),
        dict({
          'cve_id': 'CVE-2022-26691',
          'description': 'A logic issue was addressed with improved state management. This issue is fixed in Security Update 2022-003 Catalina, macOS Monterey 12.3, macOS Big Sur 11.6.5. An application may be able to gain elevated privileges.',
        }),
        dict({
          'cve_id': 'CVE-2022-28330',
          'description': 'Apache HTTP Server 2.4.53 and earlier on Windows may read beyond bounds when configured to process requests with the mod_isapi module.',
        }),
        dict({
          'cve_id': 'CVE-2022-28614',
          'description': "The ap_rwrite() function in Apache HTTP Server 2.4.53 and earlier may read unintended memory if an attacker can cause the server to reflect very large input using ap_rwrite() or ap_rputs(), such as with mod_luas r:puts() function. Modules compiled and distributed separately from Apache HTTP Server that use the 'ap_rputs' function and may pass it a very large (INT_MAX or larger) string must be compiled against current headers to resolve the issue.",
        }),
        dict({
          'cve_id': 'CVE-2022-28615',
          'description': 'Apache HTTP Server 2.4.53 and earlier may crash or disclose information due to a read beyond bounds in ap_strcmp_match() when provided with an extremely large input buffer. While no code distributed with the server can be coerced into such a call, third-party modules or lua scripts that use ap_strcmp_match() may hypothetically be affected.',
        }),
        dict({
          'cve_id': 'CVE-2022-29404',
          'description': 'In Apache HTTP Server 2.4.53 and earlier, a malicious request to a lua script that calls r:parsebody(0) may cause a denial of service due to no default limit on possible input size.',
        }),
        dict({
          'cve_id': 'CVE-2022-30556',
          'description': 'Apache HTTP Server 2.4.53 and earlier may return lengths to applications calling r:wsread() that point past the end of the storage allocated for the buffer.',
        }),
        dict({
          'cve_id': 'CVE-2022-31628',
          'description': 'In PHP versions before 7.4.31, 8.0.24 and 8.1.11, the phar uncompressor code would recursively uncompress "quines" gzip files, resulting in an infinite loop.',
        }),
        dict({
          'cve_id': 'CVE-2022-31629',
          'description': "In PHP versions before 7.4.31, 8.0.24 and 8.1.11, the vulnerability enables network and same-site attackers to set a standard insecure cookie in the victim's browser which is treated as a `__Host-` or `__Secure-` cookie by PHP applications.",
        }),
        dict({
          'cve_id': 'CVE-2022-31813',
          'description': 'Apache HTTP Server 2.4.53 and earlier may not send the X-Forwarded-* headers to the origin server based on client side Connection header hop-by-hop mechanism. This may be used to bypass IP based authentication on the origin server/application.',
        }),
        dict({
          'cve_id': 'CVE-2022-36760',
          'description': "Inconsistent Interpretation of HTTP Requests ('HTTP Request Smuggling') vulnerability in mod_proxy_ajp of Apache HTTP Server allows an attacker to smuggle requests to the AJP server it forwards requests to.  This issue affects Apache HTTP Server Apache HTTP Server 2.4 version 2.4.54 and prior versions.",
        }),
        dict({
          'cve_id': 'CVE-2022-37436',
          'description': 'Prior to Apache HTTP Server 2.4.55, a malicious backend can cause the response headers to be truncated early, resulting in some headers being incorporated into the response body. If the later headers have any security purpose, they will not be interpreted by the client.',
        }),
        dict({
          'cve_id': 'CVE-2022-4900',
          'description': 'A vulnerability was found in PHP where setting the environment variable PHP_CLI_SERVER_WORKERS to a large value leads to a heap buffer overflow.',
        }),
        dict({
          'cve_id': 'CVE-2023-25690',
          'description': '''
            Some mod_proxy configurations on Apache HTTP Server versions 2.4.0 through 2.4.55 allow a HTTP Request Smuggling attack.
            
            
            
            
            Configurations are affected when mod_proxy is enabled along with some form of RewriteRule
             or ProxyPassMatch in which a non-specific pattern matches
             some portion of the user-supplied request-target (URL) data and is then
             re-inserted into the proxied request-target using variable 
            substitution. For example, something like:
            
            
            
            
            RewriteEngine on
            RewriteRule "^/here/(.*)" "http://example.com:8080/elsewhere?$1"; [P]
            ProxyPassReverse /here/ http://example.com:8080/
            
            
            Request splitting/smuggling could result in bypass of access controls in the proxy server, proxying unintended URLs to existing origin servers, and cache poisoning. Users are recommended to update to at least version 2.4.56 of Apache HTTP Server.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2023-31122',
          'description': 'Out-of-bounds Read vulnerability in mod_macro of Apache HTTP Server.This issue affects Apache HTTP Server: through 2.4.57.',
        }),
        dict({
          'cve_id': 'CVE-2023-38408',
          'description': 'The PKCS#11 feature in ssh-agent in OpenSSH before 9.3p2 has an insufficiently trustworthy search path, leading to remote code execution if an agent is forwarded to an attacker-controlled system. (Code in /usr/lib is not necessarily safe for loading into ssh-agent.) NOTE: this issue exists because of an incomplete fix for CVE-2016-10009.',
        }),
        dict({
          'cve_id': 'CVE-2023-38709',
          'description': '''
            Faulty input validation in the core of Apache allows malicious or exploitable backend/content generators to split HTTP responses.
            
            This issue affects Apache HTTP Server: through 2.4.58.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2023-44487',
          'description': 'The HTTP/2 protocol allows a denial of service (server resource consumption) because request cancellation can reset many streams quickly, as exploited in the wild in August through October 2023.',
        }),
        dict({
          'cve_id': 'CVE-2023-45802',
          'description': '''
            When a HTTP/2 stream was reset (RST frame) by a client, there was a time window were the request's memory resources were not reclaimed immediately. Instead, de-allocation was deferred to connection close. A client could send new requests and resets, keeping the connection busy and open and causing the memory footprint to keep on growing. On connection close, all resources were reclaimed, but the process might run out of memory before that.
            
            This was found by the reporter during testing of CVE-2023-44487 (HTTP/2 Rapid Reset Exploit) with their own test client. During "normal" HTTP/2 use, the probability to hit this bug is very low. The kept memory would not become noticeable before the connection closes or times out.
            
            Users are recommended to upgrade to version 2.4.58, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2023-48795',
          'description': "The SSH transport protocol with certain OpenSSH extensions, found in OpenSSH before 9.6 and other products, allows remote attackers to bypass integrity checks such that some packets are omitted (from the extension negotiation message), and a client and server may consequently end up with a connection for which some security features have been downgraded or disabled, aka a Terrapin attack. This occurs because the SSH Binary Packet Protocol (BPP), implemented by these extensions, mishandles the handshake phase and mishandles use of sequence numbers. For example, there is an effective attack against SSH's use of ChaCha20-Poly1305 (and CBC with Encrypt-then-MAC). The bypass occurs in chacha20-poly1305@openssh.com and (if CBC is used) the -etm@openssh.com MAC algorithms. This also affects Maverick Synergy Java SSH API before 3.1.0-SNAPSHOT, Dropbear through 2022.83, Ssh before 5.1.1 in Erlang/OTP, PuTTY before 0.80, AsyncSSH before 2.14.2, golang.org/x/crypto before 0.17.0, libssh before 0.10.6, libssh2 through 1.11.0, Thorn Tech SFTP Gateway before 3.4.6, Tera Term before 5.1, Paramiko before 3.4.0, jsch before 0.2.15, SFTPGo before 2.5.6, Netgate pfSense Plus through 23.09.1, Netgate pfSense CE through 2.7.2, HPN-SSH through 18.2.0, ProFTPD before 1.3.8b (and before 1.3.9rc2), ORYX CycloneSSH before 2.3.4, NetSarang XShell 7 before Build 0144, CrushFTP before 10.6.0, ConnectBot SSH library before 2.2.22, Apache MINA sshd through 2.11.0, sshj through 0.37.0, TinySSH through 20230101, trilead-ssh2 6401, LANCOM LCOS and LANconfig, FileZilla before 3.66.4, Nova before 11.8, PKIX-SSH before 14.4, SecureCRT before 9.4.3, Transmit5 before 5.10.4, Win32-OpenSSH before 9.5.0.0p1-Beta, WinSCP before 6.2.2, Bitvise SSH Server before 9.32, Bitvise SSH Client before 9.33, KiTTY through 0.76.1.13, the net-ssh gem 7.2.0 for Ruby, the mscdex ssh2 module before 1.15.0 for Node.js, the thrussh library before 0.35.1 for Rust, and the Russh crate before 0.40.2 for Rust.",
        }),
        dict({
          'cve_id': 'CVE-2023-51385',
          'description': 'In ssh in OpenSSH before 9.6, OS command injection might occur if a user name or host name has shell metacharacters, and this name is referenced by an expansion token in certain situations. For example, an untrusted Git repository can have a submodule with shell metacharacters in a user name or host name.',
        }),
        dict({
          'cve_id': 'CVE-2023-51713',
          'description': 'make_ftp_cmd in main.c in ProFTPD before 1.3.8a has a one-byte out-of-bounds read, and daemon crash, because of mishandling of quote/backslash semantics.',
        }),
        dict({
          'cve_id': 'CVE-2023-51767',
          'description': 'OpenSSH through 10.0, when common types of DRAM are used, might allow row hammer attacks (for authentication bypass) because the integer value of authenticated in mm_answer_authpassword does not resist flips of a single bit. NOTE: this is applicable to a certain threat model of attacker-victim co-location in which the attacker has user privileges. NOTE: this is disputed by the Supplier, who states "we do not consider it to be the application\'s responsibility to defend against platform architectural weaknesses."',
        }),
        dict({
          'cve_id': 'CVE-2024-24795',
          'description': '''
            HTTP Response splitting in multiple modules in Apache HTTP Server allows an attacker that can inject malicious response headers into backend applications to cause an HTTP desynchronization attack.
            
            Users are recommended to upgrade to version 2.4.59, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-27316',
          'description': 'HTTP/2 incoming headers exceeding the limit are temporarily buffered in nghttp2 in order to generate an informative HTTP 413 response. If a client does not stop sending headers, this leads to memory exhaustion.',
        }),
        dict({
          'cve_id': 'CVE-2024-3566',
          'description': 'A command inject vulnerability allows an attacker to perform command injection on Windows applications that indirectly depend on the CreateProcess function when the specific conditions are satisfied.',
        }),
        dict({
          'cve_id': 'CVE-2024-38472',
          'description': '''
            SSRF in Apache HTTP Server on Windows allows to potentially leak NTLM hashes to a malicious server via SSRF and malicious requests or content 
            Users are recommended to upgrade to version 2.4.60 which fixes this issue.  Note: Existing configurations that access UNC paths will have to configure new directive "UNCList" to allow access during request processing.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38473',
          'description': '''
            Encoding problem in mod_proxy in Apache HTTP Server 2.4.59 and earlier allows request URLs with incorrect encoding to be sent to backend services, potentially bypassing authentication via crafted requests.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38474',
          'description': '''
            Substitution encoding issue in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows attacker to execute scripts in
            directories permitted by the configuration but not directly reachable by any URL or source disclosure of scripts meant to only to be executed as CGI.
            
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
            
            Some RewriteRules that capture and substitute unsafely will now fail unless rewrite flag "UnsafeAllow3F" is specified.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38475',
          'description': '''
            Improper escaping of output in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows an attacker to map URLs to filesystem locations that are permitted to be served by the server but are not intentionally/directly reachable by any URL, resulting in code execution or source code disclosure. 
            
            Substitutions in server context that use a backreferences or variables as the first segment of the substitution are affected.  Some unsafe RewiteRules will be broken by this change and the rewrite flag "UnsafePrefixStat" can be used to opt back in once ensuring the substitution is appropriately constrained.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38476',
          'description': '''
            Vulnerability in core of Apache HTTP Server 2.4.59 and earlier are vulnerably to information disclosure, SSRF or local script execution via backend applications whose response headers are malicious or exploitable.
            
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38477',
          'description': '''
            null pointer dereference in mod_proxy in Apache HTTP Server 2.4.59 and earlier allows an attacker to crash the server via a malicious request.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-39573',
          'description': '''
            Potential SSRF in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows an attacker to cause unsafe RewriteRules to unexpectedly setup URL's to be handled by mod_proxy.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-40898',
          'description': '''
            SSRF in Apache HTTP Server on Windows with mod_rewrite in server/vhost context, allows to potentially leak NTML hashes to a malicious server via SSRF and malicious requests.
            
            Users are recommended to upgrade to version 2.4.62 which fixes this issue. 
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-42516',
          'description': '''
            HTTP response splitting in the core of Apache HTTP Server allows an attacker who can manipulate the Content-Type response headers of applications hosted or proxied by the server can split the HTTP response.
            
            This vulnerability was described as CVE-2023-38709 but the patch included in Apache HTTP Server 2.4.59 did not address the issue.
            
            Users are recommended to upgrade to version 2.4.64, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-43204',
          'description': '''
            SSRF in Apache HTTP Server with mod_proxy loaded allows an attacker to send outbound proxy requests to a URL controlled by the attacker.  Requires an unlikely configuration where mod_headers is configured to modify the Content-Type request or response header with a value provided in the HTTP request.
            
            Users are recommended to upgrade to version 2.4.64 which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-43394',
          'description': '''
            Server-Side Request Forgery (SSRF) in Apache HTTP Server on Windows allows to potentially leak NTLM hashes to a malicious server via 
            mod_rewrite or apache expressions that pass unvalidated request input.
            
            This issue affects Apache HTTP Server: from 2.4.0 through 2.4.63.
            
            Note:  The Apache HTTP Server Project will be setting a higher bar for accepting vulnerability reports regarding SSRF via UNC paths. 
            
            The server offers limited protection against administrators directing the server to open UNC paths.
            Windows servers should limit the hosts they will connect over via SMB based on the nature of NTLM authentication.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-47252',
          'description': '''
            Insufficient escaping of user-supplied data in mod_ssl in Apache HTTP Server 2.4.63 and earlier allows an untrusted SSL/TLS client to insert escape characters into log files in some configurations.
            
            In a logging configuration where CustomLog is used with "%{varname}x" or "%{varname}c" to log variables provided by mod_ssl such as SSL_TLS_SNI, no escaping is performed by either mod_log_config or mod_ssl and unsanitized data provided by the client may appear in log files.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-23419',
          'description': '''
            When multiple server blocks are configured to share the same IP address and port, an attacker can use session resumption to bypass client certificate authentication requirements on these servers. This vulnerability arises when  TLS Session Tickets https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_session_ticket_key  are used and/or the  SSL session cache https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_session_cache  are used in the default server and the default server is performing client certificate authentication.  
            
            Note: Software versions which have reached End of Technical Support (EoTS) are not evaluated.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-49812',
          'description': '''
            In some mod_ssl configurations on Apache HTTP Server versions through to 2.4.63, an HTTP desynchronisation attack allows a man-in-the-middle attacker to hijack an HTTP session via a TLS upgrade.
            
            Only configurations using "SSLEngine optional" to enable TLS upgrades are affected. Users are recommended to upgrade to version 2.4.64, which removes support for TLS upgrade.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-53020',
          'description': '''
            Late Release of Memory after Effective Lifetime vulnerability in Apache HTTP Server.
            
            This issue affects Apache HTTP Server: from 2.4.17 up to 2.4.63.
            
            Users are recommended to upgrade to version 2.4.64, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-58098',
          'description': '''
            Apache HTTP Server 2.4.65 and earlier with Server Side Includes (SSI) enabled and mod_cgid (but not mod_cgi) passes the shell-escaped query string to #exec cmd="..." directives.
            
            This issue affects Apache HTTP Server before 2.4.66.
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-59775',
          'description': '''
            Server-Side Request Forgery (SSRF) vulnerability 
            
             in Apache HTTP Server on Windows 
            
            with AllowEncodedSlashes On and MergeSlashes Off  allows to potentially leak NTLM 
            hashes to a malicious server via SSRF and malicious requests or content
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-65082',
          'description': '''
            Improper Neutralization of Escape, Meta, or Control Sequences vulnerability in Apache HTTP Server through environment variables set via the Apache configuration unexpectedly superseding variables calculated by the server for CGI programs.
            
            This issue affects Apache HTTP Server from 2.4.0 through 2.4.65.
            
            Users are recommended to upgrade to version 2.4.66 which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-66200',
          'description': '''
            mod_userdir+suexec bypass via AllowOverride FileInfo vulnerability in Apache HTTP Server. Users with access to use the RequestHeader directive in htaccess can cause some CGI scripts to run under an unexpected userid.
            
            This issue affects Apache HTTP Server: from 2.4.7 through 2.4.65.
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_easm_snapshot[easm]
  dict({
    'data': dict({
      'nodeObjects': list([
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
              ]),
            }),
          ]),
        }),
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'resilmesh-sap-casm-metasploitable3',
                }),
                dict({
                  'domain_name': 'resilmesh-sap-casm-metasploitable3.resilmesh_network',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
            ]),
            'software_versions': list([
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'rest.vulnweb.com',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
            ]),
            'software_versions': list([
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'test.cz',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
            ]),
            'software_versions': list([
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'testasp.vulnweb.com',
                }),
                dict({
                  'domain_name': 'testaspnet.vulnweb.com',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
            ]),
            'software_versions': list([
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'testhtml5.vulnweb.com',
                }),
                dict({
                  'domain_name': 'testphp.vulnweb.com',
                }),
                dict({
                  'domain_name': 'vulnweb.com',
                }),
                dict({
                  'domain_name': 'www.vulnweb.com',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
              dict({
                'port': 21,
                'protocol': 'tcp',
                'service': 'ftp',
              }),
              dict({
                'port': 22,
                'protocol': 'tcp',
                'service': 'ssh',
              }),
              dict({
                'port': 631,
                'protocol': 'tcp',
                'service': 'ipp',
              }),
              dict({
                'port': 80,
                'protocol': 'tcp',
                'service': 'http',
              }),
            ]),
            'software_versions': list([
              dict({
                'version': 'cpe:2.3:a:apache:http_server:2.4.7:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:apple:cups:1.7:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:openbsd:openssh:6.6.1p1:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:proftpd:proftpd:1.3.5:*:*:*:*:*:*',
              }),
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'resilmesh-sap-casm-metasploitable3',
                }),
                dict({
                  'domain_name': 'resilmesh-sap-casm-metasploitable3.resilmesh_network',
                }),
              ]),
            }),
          ]),
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_nmap_snapshot[nmap]
  dict({
    'data': dict({
      'hosts': list([
        dict({
          'components': list([
          ]),
          'hostname': None,
          'network_services': list([
          ]),
          'software_versions': list([
          ]),
        }),
        dict({
          'components': list([
          ]),
          'hostname': None,
          'network_services': list([
            dict({
              'port': 21,
              'protocol': 'tcp',
              'service': 'ftp',
            }),
            dict({
              'port': 22,
              'protocol': 'tcp',
              'service': 'ssh',
            }),
            dict({
              'port': 631,
              'protocol': 'tcp',
              'service': 'ipp',
            }),
            dict({
              'port': 80,
              'protocol': 'tcp',
              'service': 'http',
            }),
          ]),
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.7:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:apple:cups:1.7:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:openbsd:openssh:6.6.1p1:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:proftpd:proftpd:1.3.5:*:*:*:*:*:*',
            }),
          ]),
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_nuclei_snapshot[nuclei]
  dict({
    'errors': list([
      dict({
        'extensions': dict({
          'code': 'GRAPHQL_VALIDATION_FAILED',
          'exception': dict({
            'stacktrace': list([
              '    at Object.Field (/app/node_modules/graphql/validation/rules/FieldsOnCorrectTypeRule.js:51:13)',
              '    at Object.enter (/app/node_modules/graphql/language/visitor.js:298:32)',
              '    at Object.enter (/app/node_modules/graphql/utilities/TypeInfo.js:391:27)',
              '    at async processHTTPRequest (/app/node_modules/apollo-server-core/dist/runHttpQuery.js:222:30)',
              '    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)',
              '    at processGraphQLRequest (/app/node_modules/apollo-server-core/dist/requestPipeline.js:99:38)',
              '    at validate (/app/node_modules/apollo-server-core/dist/requestPipeline.js:188:39)',
              '    at validate (/app/node_modules/graphql/validation/validate.js:91:24)',
              '    at visit (/app/node_modules/graphql/language/visitor.js:194:21)',
              'GraphQLError: Cannot query field "status" on type "Vulnerability".',
            ]),
          }),
        }),
        'message': 'Cannot query field "status" on type "Vulnerability".',
      }),
    ]),
  })
# ---
